fix hover state on iphone

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -331,6 +331,7 @@ body {
 }
 
 #team {
+  cursor: pointer;
   background-color: darken($brand-light, 5);
 
   h1 {
